--- a/Projects/Delphi/Template/HeaderFooterFormwithNavigation.fmx
+++ b/Projects/Delphi/Template/HeaderFooterFormwithNavigation.fmx
@@ -81,6 +81,86 @@ object HeaderFooterwithNavigation: THeaderFooterwithNavigation
         Size.PlatformDefault = False
         Text = 'Disconnected'
       end
+      object TreeView1: TTreeView
+        Position.X = 56.000000000000000000
+        Position.Y = 56.000000000000000000
+        Size.Width = 225.000000000000000000
+        Size.Height = 209.000000000000000000
+        Size.PlatformDefault = False
+        TabOrder = 1
+        Viewport.Width = 221.000000000000000000
+        Viewport.Height = 205.000000000000000000
+        object TreeViewItem1: TTreeViewItem
+          IsChecked = False
+          IsExpanded = False
+          IsSelected = False
+          TabOrder = 0
+          Text = 'TreeViewItem1'
+          object TreeViewItem2: TTreeViewItem
+            IsChecked = False
+            IsExpanded = False
+            IsSelected = False
+            TabOrder = 0
+            Text = 'TreeViewItem2'
+          end
+          object TreeViewItem3: TTreeViewItem
+            IsChecked = False
+            IsExpanded = False
+            IsSelected = False
+            TabOrder = 1
+            Text = 'TreeViewItem3'
+          end
+          object TreeViewItem4: TTreeViewItem
+            IsChecked = False
+            IsExpanded = False
+            IsSelected = False
+            TabOrder = 2
+            Text = 'TreeViewItem4'
+          end
+          object TreeViewItem5: TTreeViewItem
+            IsChecked = False
+            IsExpanded = False
+            IsSelected = False
+            TabOrder = 3
+            Text = 'TreeViewItem5'
+          end
+        end
+        object TreeViewItem6: TTreeViewItem
+          IsChecked = False
+          IsExpanded = False
+          IsSelected = False
+          TabOrder = 1
+          Text = 'TreeViewItem6'
+          object TreeViewItem7: TTreeViewItem
+            IsChecked = False
+            IsExpanded = False
+            IsSelected = False
+            TabOrder = 0
+            Text = 'TreeViewItem7'
+            object TreeViewItem9: TTreeViewItem
+              IsChecked = False
+              IsExpanded = False
+              IsSelected = False
+              TabOrder = 0
+              Text = 'TreeViewItem9'
+            end
+            object TreeViewItem10: TTreeViewItem
+              IsChecked = False
+              IsExpanded = False
+              IsSelected = False
+              TabOrder = 1
+              Text = 'TreeViewItem10'
+            end
+          end
+          object TreeViewItem8: TTreeViewItem
+            IsChecked = False
+            IsExpanded = False
+            IsSelected = False
+            TabOrder = 1
+            Text = 'TreeViewItem8'
+          end
+        end
+      end
     end
     object TabItem2: TTabItem
       CustomIcon = <
