- Update Delphi Firemonkey Template

--- a/Projects/Delphi/Template/HeaderFooterFormwithNavigation.iPhone4in.fmx
+++ b/Projects/Delphi/Template/HeaderFooterFormwithNavigation.iPhone4in.fmx
@@ -19,9 +19,9 @@ inherited HeaderFooterwithNavigation_iPhone4in: THeaderFooterwithNavigation_iPho
         Position.Y = 443.000000000000000000
         Size.Width = 304.000000000000000000
       end
-      inherited TreeView1: TTreeView
-        Viewport.Width = 225.000000000000000000
-        Viewport.Height = 209.000000000000000000
+      inherited LccNetworkTree1: TLccNetworkTree
+        Viewport.Width = 148.000000000000000000
+        Viewport.Height = 148.000000000000000000
       end
     end
   end
