--- a/Projects/Delphi/Template/HeaderFooterFormwithNavigation.LgXhdpiPh.fmx
+++ b/Projects/Delphi/Template/HeaderFooterFormwithNavigation.LgXhdpiPh.fmx
@@ -29,9 +29,9 @@ inherited HeaderFooterwithNavigation_LgXhdpiPh: THeaderFooterwithNavigation_LgXh
         Position.Y = 582.000000000000000000
         Size.Width = 434.000000000000000000
       end
-      inherited TreeView1: TTreeView
-        Viewport.Width = 225.000000000000000000
-        Viewport.Height = 209.000000000000000000
+      inherited LccNetworkTree1: TLccNetworkTree
+        Viewport.Width = 148.000000000000000000
+        Viewport.Height = 148.000000000000000000
       end
     end
   end
