--- a/Projects/Lazarus/RR-Circuits_UsbCan_Tester/form_template.lfm
+++ b/Projects/Lazarus/RR-Circuits_UsbCan_Tester/form_template.lfm
@@ -4,13 +4,13 @@ object FormTemplate: TFormTemplate
   Top = 212
   Width = 747
   Caption = 'RR CirKits'
-  ClientHeight = 421
+  ClientHeight = 441
   ClientWidth = 747
   Menu = MainMenu
   OnCloseQuery = FormCloseQuery
   OnResize = FormResize
   OnShow = FormShow
-  LCLVersion = '1.4.0.4'
+  LCLVersion = '1.2.6.0'
   object ToolBarMain: TToolBar
     Left = 0
     Height = 46
@@ -28,38 +28,37 @@ object FormTemplate: TFormTemplate
       Action = ActionComPortConnect
     end
     object ToolButtonEthernetClient: TToolButton
-      Left = 50
+      Left = 63
       Top = 2
       Action = ActionEthenetClientConnect
     end
     object ToolButtonEthernetServer: TToolButton
-      Left = 130
+      Left = 165
       Top = 2
       Action = ActionEthernetServerConnect
     end
     object ToolButtonSeparator: TToolButton
-      Left = 215
-      Height = 44
+      Left = 269
       Top = 2
-      Width = 20
+      Width = 10
       Caption = 'ToolButtonSpace'
       Style = tbsSeparator
     end
     object ToolButtonMsgTrace: TToolButton
-      Left = 290
+      Left = 351
       Top = 2
       Action = ActionMsgTrace
     end
     object ToolButtonLccLogIn: TToolButton
-      Left = 235
+      Left = 279
       Top = 2
       Action = ActionLccLogin
     end
   end
   object StatusBarMain: TStatusBar
     Left = 0
-    Height = 23
-    Top = 398
+    Height = 15
+    Top = 426
     Width = 747
     Panels = <    
       item
@@ -74,25 +73,25 @@ object FormTemplate: TFormTemplate
   end
   object PanelAppSpace: TPanel
     Left = 0
-    Height = 209
+    Height = 237
     Top = 46
     Width = 747
     Align = alClient
-    ClientHeight = 209
+    ClientHeight = 237
     ClientWidth = 747
     TabOrder = 2
     object PanelOutgoing: TPanel
       Left = 1
-      Height = 207
+      Height = 235
       Top = 1
       Width = 319
       Align = alLeft
-      ClientHeight = 207
+      ClientHeight = 235
       ClientWidth = 319
       TabOrder = 0
       object MemoOutgoing: TMemo
         Left = 1
-        Height = 155
+        Height = 183
         Top = 1
         Width = 317
         Align = alClient
@@ -102,7 +101,7 @@ object FormTemplate: TFormTemplate
       object Panel1: TPanel
         Left = 1
         Height = 50
-        Top = 156
+        Top = 184
         Width = 317
         Align = alBottom
         ClientHeight = 50
@@ -132,16 +131,16 @@ object FormTemplate: TFormTemplate
     end
     object PanelIncoming: TPanel
       Left = 442
-      Height = 207
+      Height = 235
       Top = 1
       Width = 304
       Align = alClient
-      ClientHeight = 207
+      ClientHeight = 235
       ClientWidth = 304
       TabOrder = 1
       object MemoIncoming: TMemo
         Left = 1
-        Height = 143
+        Height = 171
         Top = 1
         Width = 302
         Align = alClient
@@ -151,7 +150,7 @@ object FormTemplate: TFormTemplate
       object Panel2: TPanel
         Left = 1
         Height = 62
-        Top = 144
+        Top = 172
         Width = 302
         Align = alBottom
         ClientHeight = 62
@@ -179,9 +178,10 @@ object FormTemplate: TFormTemplate
         end
         object CheckBoxLockUpdate: TCheckBox
           Left = 176
-          Height = 17
+          Height = 18
           Top = 8
-          Width = 91
+          Width = 115
+          Anchors = [akTop, akRight]
           Caption = 'Lock UI Update'
           OnChange = CheckBoxLockUpdateChange
           TabOrder = 2
@@ -190,17 +190,17 @@ object FormTemplate: TFormTemplate
     end
     object PanelCenter: TPanel
       Left = 320
-      Height = 207
+      Height = 235
       Top = 1
       Width = 122
       Align = alLeft
-      ClientHeight = 207
+      ClientHeight = 235
       ClientWidth = 122
       TabOrder = 2
       object ButtonSend: TButton
         Left = 8
         Height = 22
-        Top = 175
+        Top = 203
         Width = 104
         Anchors = [akLeft, akBottom]
         Caption = 'Send ->'
@@ -209,8 +209,8 @@ object FormTemplate: TFormTemplate
       end
       object SpinEditDelay: TSpinEdit
         Left = 16
-        Height = 21
-        Top = 129
+        Height = 16
+        Top = 162
         Width = 74
         Alignment = taRightJustify
         Anchors = [akLeft, akBottom]
@@ -220,9 +220,9 @@ object FormTemplate: TFormTemplate
       end
       object Label1: TLabel
         Left = 8
-        Height = 13
-        Top = 113
-        Width = 73
+        Height = 16
+        Top = 138
+        Width = 96
         Anchors = [akLeft, akBottom]
         Caption = 'Msg Delay (ms)'
         ParentColor = False
@@ -238,7 +238,7 @@ object FormTemplate: TFormTemplate
       end
       object SpinEditRepeat: TSpinEdit
         Left = 16
-        Height = 21
+        Height = 16
         Top = 66
         Width = 74
         Alignment = taRightJustify
@@ -248,9 +248,9 @@ object FormTemplate: TFormTemplate
       end
       object Label2: TLabel
         Left = 8
-        Height = 13
+        Height = 16
         Top = 48
-        Width = 67
+        Width = 85
         Caption = 'Repeat Count'
         ParentColor = False
       end
@@ -260,7 +260,7 @@ object FormTemplate: TFormTemplate
     Cursor = crVSplit
     Left = 0
     Height = 5
-    Top = 255
+    Top = 283
     Width = 747
     Align = alBottom
     ResizeAnchor = akBottom
@@ -268,7 +268,7 @@ object FormTemplate: TFormTemplate
   object PanelAddOns: TPanel
     Left = 0
     Height = 138
-    Top = 260
+    Top = 288
     Width = 747
     Align = alBottom
     ClientHeight = 138
@@ -276,7 +276,7 @@ object FormTemplate: TFormTemplate
     TabOrder = 4
     object LabelServerConnections: TLabel
       Left = 9
-      Height = 13
+      Height = 16
       Top = 1
       Width = 729
       Align = alTop
@@ -287,8 +287,8 @@ object FormTemplate: TFormTemplate
     end
     object ListViewServerConnections: TListView
       Left = 1
-      Height = 123
-      Top = 14
+      Height = 120
+      Top = 17
       Width = 745
       Align = alClient
       Columns = <      
