--- a/Projects/Delphi/Template/HeaderFooterFormwithNavigation.fmx
+++ b/Projects/Delphi/Template/HeaderFooterFormwithNavigation.fmx
@@ -4,6 +4,7 @@ object HeaderFooterwithNavigation: THeaderFooterwithNavigation
   Caption = 'HeaderFooter'
   ClientHeight = 567
   ClientWidth = 384
+  Position = Designed
   FormFactor.Width = 1440
   FormFactor.Height = 900
   FormFactor.Devices = [Desktop]
@@ -81,19 +82,12 @@ object HeaderFooterwithNavigation: THeaderFooterwithNavigation
         Size.PlatformDefault = False
         Text = 'Disconnected'
       end
-      object LccNetworkTree1: TLccNetworkTree
-        Position.X = 72.000000000000000000
-        Position.Y = 72.000000000000000000
-        Size.Width = 148.000000000000000000
-        Size.Height = 148.000000000000000000
-        Size.PlatformDefault = False
+      object Button1: TButton
+        Position.X = 48.000000000000000000
+        Position.Y = 32.000000000000000000
         TabOrder = 1
-        Connected = False
-        NetworkTreeProperties = []
-        ShowRootNode = False
-        ShowLocallNodes = False
-        Viewport.Width = 144.000000000000000000
-        Viewport.Height = 144.000000000000000000
+        Text = 'Lcc Login'
+        OnClick = Button1Click
       end
     end
     object TabItem2: TTabItem
@@ -153,19 +147,19 @@ object HeaderFooterwithNavigation: THeaderFooterwithNavigation
       OnExecute = ActionConnectExecute
     end
   end
-  object LccEthernetServer1: TLccEthernetServer
+  object LccEthernetServer: TLccEthernetServer
     Hub = False
-    Gridconnect = False
-    LccSettings = LccSettings1
-    NodeManager = LccNodeManager1
-    OnConnectionStateChange = LccEthernetServer1ConnectionStateChange
-    OnErrorMessage = LccEthernetServer1ErrorMessage
+    Gridconnect = True
+    LccSettings = LccSettings
+    NodeManager = LccNodeManager
+    OnConnectionStateChange = LccEthernetServerConnectionStateChange
+    OnErrorMessage = LccEthernetServerErrorMessage
     SchedulerPipelineSize = 1
     SleepCount = 0
-    Left = 288
-    Top = 244
+    Left = 304
+    Top = 124
   end
-  object LccSettings1: TLccSettings
+  object LccSettings: TLccSettings
     ComPort.AutoConnectAtBoot = False
     ComPort.BaudRate = 333333
     ComPort.DataBits = cpdb_8_Bits
@@ -173,7 +167,7 @@ object HeaderFooterwithNavigation: THeaderFooterwithNavigation
     ComPort.Port = 'COM1'
     ComPort.StopBits = cpsb_1_StopBit
     ComPort.FlowControl = cpf_None
-    Ethernet.AutoResolveListenerIP = True
+    Ethernet.AutoResolveListenerIP = False
     Ethernet.AutoResolveClientIP = False
     Ethernet.GridConnect = True
     Ethernet.LocalClientIP = '127.0.0.1'
@@ -193,16 +187,19 @@ object HeaderFooterwithNavigation: THeaderFooterwithNavigation
     PiSpiPort.Bits = psb_8
     Throttle.AutoLoadFDI = True
     Throttle.AutoScrollDelta = 2
-    Left = 136
-    Top = 212
+    Left = 304
+    Top = 68
   end
-  object LccNodeManager1: TLccNodeManager
+  object LccNodeManager: TLccNodeManager
     AutoInterrogateDiscoveredNodes = False
     AutoSendVerifyNodesOnStart = False
     Enabled = False
     CAN = False
-    LccSettings = LccSettings1
-    Left = 296
-    Top = 300
+    HardwareConnection = LccEthernetServer
+    LccSettings = LccSettings
+    OnLccGetRootNodeClass = LccNodeManagerLccGetRootNodeClass
+    OnNodeIDChanged = LccNodeManagerNodeIDChanged
+    Left = 304
+    Top = 180
   end
 end
