--- a/Projects/LazarusRaspberryPi/EthernetStressTester/form_main.lfm
+++ b/Projects/LazarusRaspberryPi/EthernetStressTester/form_main.lfm
@@ -1,8 +1,9 @@
 object Form1: TForm1
-  Left = 309
+  Left = 302
   Height = 643
-  Top = 239
+  Top = 223
   Width = 899
+  ActiveControl = PanelAppSpace
   Caption = 'Lcc Raspberry Stress Tester'
   ClientHeight = 614
   ClientWidth = 899
@@ -352,8 +353,8 @@ object Form1: TForm1
     Logging.Detailed = False
     Logging.Enabled = False
     Logging.JMRIFormat = False
-    PiSpiPort.Speed = pss_7_8Mhz
-    PiSpiPort.Mode = psm_ClkIdleLo_DataRising
+    PiSpiPort.Speed = pss_122kHz
+    PiSpiPort.Mode = psm_ClkIdleLo_DataFalling
     PiSpiPort.Bits = psb_8
     OnLoadFromFile = LccSettingsLoadFromFile
     OnSaveToFile = LccSettingsSaveToFile
